--- a/public/templates/auth.html
+++ b/public/templates/auth.html
@@ -3,7 +3,7 @@
 	<img src="images/logo.png"/>
 <div> -->
 
-<section id="profile">
+<!-- <section id="profile">
 	<div class="container">
 		<div class="text-center">
 			<h1> Sign In </h1>
@@ -22,55 +22,89 @@
 			<button class="btn btn-primary btn-xs" ng-click="clickToLogin(email, password)"> <i class="fa fa-user"></i>  Login </button>
 			<button class="btn btn-primary btn-xs" ng-click="clickToRegister(email, password)"> Register </button>
 		</div>
-		
+		 -->
 
-		 <!-- SAMPLE CODE -->
-<!-- <section id="profile">
-<div class="container">
-	<div class="text-center">
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
+		 <!-- SECOND LOGIN -->
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="../images/stormy.jpg" alt="Chania">
+    </div>
+
+    <div class="item">
+      <img src="../images/arches.jpg" alt="Chania">
+    </div>
+
+    <div class="item">
+      <img src="../images/sunshine.jpg" alt="Flower">
+    </div>
+
+    <div class="item">
+      <img src="../images/yellow.jpg" alt="Flower">
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+ <!--  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a> -->
+</div>
+
+    <!-- <div class="navbar navbar-fixed-top"> -->
+      <!-- <div class="navbar-inner"> -->
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html"><img src="logo.png" alt=""></a>
+          <!-- <a class="brand" href="index.html"><img src="logo.png" alt="Typica - Bootstrap Awesome Template!"></a> -->
         </div>
+      <!-- </div> -->
       </div>
-    </div>
 
-    <div class="container">
+
+    <div style="opacity: 0.8" class="container">
 
         <div id="login-wraper">
             <form class="form login-form">
-                <legend>Sign in to <span class="blue">Your Journal</span></legend>
+                <legend>Sign in to <span class="blue">The Free Mean Stack Blog!</span></legend>
             
-                <div class="body">
-                    <label>Email</label>
-                    <input type="text" ng-model="email">
-                    <br>
-                    <label>Password</label>
-                    <input type="password" ng-model="password">
-                </div>
-            
-                <div class="footer">
-                    <label class="checkbox inline">
-                        <input type="checkbox" id="inlineCheckbox1" value="option1"> Remember me
-                    </label>
-                                
-                    <button type="submit" ng-click="clickToLogin(email, password)" class="btn btn-success">Login</button>
-                </div>
+                <div class="row">
+            <div class="col-sm-6 text-right"><strong>Email:</strong></div>
+            <div class="col-sm-6 text-left"><input type="text" ng-model="email" /></div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 text-right"><strong>Password:</strong></div>
+            <div class="col-sm-6 text-left"><input type="password" ng-model="password" /></div>
+        </div>
+        <div class="row text-center">
+        <br>
+            <button class="btn btn-primary btn-xs" ng-click="clickToLogin(email, password)"> <i class="fa fa-user"></i>  Login </button>
+       
             
             </form>
         </div>
 
     </div>
-    </div>
-    </div>
 
-    <footer class="white navbar-fixed-bottom">
-      Don't have an account yet? <a href="register.html" class="btn btn-black">Register</a>
+    <footer style="color: black; opacity: 0.8" class="white navbar-fixed-bottom" >
+      Don't have an account yet? <button class="btn btn-primary btn-xs" ng-click="clickToRegister(email, password)"> Register </button>
+        </div>
     </footer>
- -->
+
