--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -3,7 +3,7 @@
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
-
+/*
 body {
     overflow-x: hidden;
 }
@@ -447,4 +447,4 @@ footer .footer-below {
 .portfolio-modal .modal-backdrop {
     display: none;
     opacity: 0;
-}
+}*/
