--- a/public/templates/auth.html
+++ b/public/templates/auth.html
@@ -83,7 +83,7 @@
 
         <div id="login-wraper">
             <form class="form login-form">
-                <legend>Sign in to <span class="blue">The Free Mean Stack Blog!</span></legend>
+                <legend> <span class="blue">The MEAN Stack Blog!</span></legend>
             
                 <div class="row">
             <div class="col-sm-6 text-right"><strong>Email:</strong></div>
@@ -104,7 +104,7 @@
     </div>
 
     <footer style="color: black; opacity: 0.8" class="white navbar-fixed-bottom" >
-      Don't have an account yet? <button class="btn btn-primary btn-xs" ng-click="clickToRegister(email, password)"> Register </button>
+      Don't have an account? <a href="#/register"> Register Here </a>
         </div>
     </footer>
 
