--- a/public/templates/journal.html
+++ b/public/templates/journal.html
@@ -13,6 +13,7 @@
 });
 </script>
 
+<div class="journalBar"
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -57,10 +58,11 @@
       </ul>
     </div>
   </div>
-</nav>
+<!-- </nav> -->
+</div>
 
 <div class=journalHeading> 
-	<h1> Text Editor  </h1> 
+	<h1> Mean Stack Blog  </h1> 
 </div>
 
 <div>
