--- a/public/templates/auth.html
+++ b/public/templates/auth.html
@@ -54,15 +54,6 @@
     </div>
   </div>
 
-  <!-- Left and right controls -->
- <!--  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a> -->
 </div>
 
     <!-- <div class="navbar navbar-fixed-top"> -->
@@ -78,11 +69,10 @@
       <!-- </div> -->
       </div>
 
-
+  
     <div style="opacity: 0.8" class="container">
-
         <div id="login-wraper">
-            <form class="form login-form">
+            <form class="form login-form animated tada">
                 <legend> <span class="blue">The MEAN Stack Blog!</span></legend>
             
                 <div class="row">
@@ -100,7 +90,6 @@
             
             </form>
         </div>
-
     </div>
 
     <footer style="color: black; opacity: 0.8" class="white navbar-fixed-bottom" >
