added animation to register page

--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -25,68 +25,11 @@
     <div class="item active">
       <img src="../images/arches.jpg" alt="Chania">
     </div>
-<!-- 
-    <div class="item">
-      <img src="../images/arches.jpg" alt="Chania">
-    </div>
-
-    <div class="item">
-      <img src="../images/sunshine.jpg" alt="Flower">
-    </div>
-
-    <div class="item">
-      <img src="../images/yellow.jpg" alt="Flower">
-    </div> -->
   </div>
 
-<!--     <div class="container">
-        <div class="row"> -->
-<!-- 
-        	<div class="span6">
-        		
-        		<div class="register-info-wraper">
-        			<div id="register-info">
-        			
-        				<h1>You are 30 seconds away from using this awesome app. Good choice!</h1>
-        			
-        				<ul dir="rtl">
-        					<li>1000X better than Blogger</li>
-        					<li>So register, like, right NOW!</li>
-        					<li>Or don't, who cares</li>
-        				</ul>
-        				
-        			</div>
-        		</div>
-
-        	</div> -->
-
-
-<!--         	<div class="span6">
-        		<div id="register-wraper">
-        		    <form id="register-form" class="form">
-        		        <legend>Register for <span class="blue">the MEAN Stack Blog</span></legend>
-        		    
-        		        <div class="body">
-        		        	<label>E-mail</label>
-        		        	<input class="input-huge" type="text" ng-model="email">
-        		        	<label>Password</label>
-        		        	<input class="input-huge" type="text" ng-model="password">
-        		        </div>
-
-        		    
-        		        <div class="footer">
-        		            <br>
-        		            <button type="submit" class="btn btn-success" ng-click="clickToRegister(email, password)">Register</button>
-        		        </div>
-        		    </form>
-        		</div>
-        	</div>
-
-        </div>
-    </div> -->
 
     <div style="opacity: 0.8" id="login-wraper">
-            <form class="form login-form">
+            <form class="form login-form animated pulse">
                 <legend style="color: green"> Register here for <br> <span class="blue">The MEAN Stack Blog!</span></legend>
             
                 <div class="row">
