--- a/public/templates/journal.html
+++ b/public/templates/journal.html
@@ -27,23 +27,7 @@
       <!-- <a class="navbar-brand" ng-click="retrievePosts()" href="/#/journal/history"> History </a> -->
     </div>
 
-    <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul> -->
+
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
          <!--  <input type="text" class="form-control" placeholder="Search"> -->
@@ -62,7 +46,7 @@
 </div>
 
 <div class=journalHeading> 
-	<h1> Mean Stack Blog  </h1> 
+	<h1> A place to store your thoughts </h1> 
 </div>
 
 <div>
@@ -81,3 +65,18 @@
 
 <div id="calendar"></div>
 
+<h1> Place a marker where you've visited .. <i class="fa fa-exclamation-triangle"></i> still under construction <i class="fa fa-exclamation-triangle"></i> </h1>
+<div class="col-md-9 googleMap"> 
+  <ui-gmap-google-map
+         center="map.center"
+         zoom="map.zoom"
+         draggable="true"
+         options="map.options">
+    <ui-gmap-marker
+         coords="map.marker.coords"
+         options="map.marker.options"
+         idkey="map.marker.id"
+         options="map.marker.options">
+    </ui-gmap-marker>
+  </ui-gmap-google-map>
+</div>
