added favicon and input for map

--- a/public/templates/journal.html
+++ b/public/templates/journal.html
@@ -66,6 +66,7 @@
 <div id="calendar"></div>
 
 <h1> Place a marker where you've visited .. <i class="fa fa-exclamation-triangle"></i> still under construction <i class="fa fa-exclamation-triangle"></i> </h1>
+<input class="location" placeholder="Location"></input>
 <div class="col-md-9 googleMap"> 
   <ui-gmap-google-map
          center="map.center"
