updated map styling and added filter to history

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,6 +20,10 @@ body {
   background: url("/images/frozen.png") repeat;
 }*/
 
+a:hover {
+  color: #bada55;
+}
+
 .journalBar {
   float: left;
 /*  height: 25px;*/
@@ -179,6 +183,6 @@ body {
 }
 
 .location {
-  margin-left: ;: 3px;
-  padding: 3px;
+  margin-left: 15px;
+  padding: 2px;
 }
