--- a/public/templates/journal.html
+++ b/public/templates/journal.html
@@ -65,8 +65,8 @@
 
 <div id="calendar"></div>
 
-<h1> Place a marker where you've visited .. <i class="fa fa-exclamation-triangle"></i> still under construction <i class="fa fa-exclamation-triangle"></i> </h1>
-<input class="location" placeholder="Location"></input>
+<h1 style="text-align: center"> Drop a marker where you've visited .. <i class="fa fa-exclamation-triangle"></i> still under construction <i class="fa fa-exclamation-triangle"></i> </h1>
+<input class="location" placeholder="Location"></input> <button type="button" class="btn btn-primary btn-xs">Submit</button>
 <div class="col-md-9 googleMap"> 
   <ui-gmap-google-map
          center="map.center"
