--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -186,3 +186,8 @@ a:hover {
   margin-left: 15px;
   padding: 2px;
 }
+
+.journalDate {
+  font-family: 'Permanent Marker', cursive;
+  color: rgb(35, 101, 155);
+}
