--- a/public/templates/journal.html
+++ b/public/templates/journal.html
@@ -46,7 +46,7 @@
 </div>
 
 <div class=journalHeading> 
-	<h1> A place to store your thoughts </h1> 
+	<h1 style="color: #4F759B"><i> A place to store your thoughts... </i></h1> 
 </div>
 
 <div>
