--- a/public/templates/auth.html
+++ b/public/templates/auth.html
@@ -1,39 +1,5 @@
 
-<!-- <div class="logo">
-	<img src="images/logo.png"/>
-<div> -->
-
-<!-- <section id="profile">
-	<div class="container">
-		<div class="text-center">
-			<h1> Sign In </h1>
-			<hr class="star-primary">
-		</div>
-		<div class="row">
-			<div class="col-sm-6 text-right"><strong>Email:</strong></div>
-			<div class="col-sm-6 text-left"><input type="text" ng-model="email" /></div>
-		</div>
-		<div class="row">
-			<div class="col-sm-6 text-right"><strong>Password:</strong></div>
-			<div class="col-sm-6 text-left"><input type="password" ng-model="password" /></div>
-		</div>
-		<div class="row text-center">
-		<br>
-			<button class="btn btn-primary btn-xs" ng-click="clickToLogin(email, password)"> <i class="fa fa-user"></i>  Login </button>
-			<button class="btn btn-primary btn-xs" ng-click="clickToRegister(email, password)"> Register </button>
-		</div>
-		 -->
-
-		 <!-- SECOND LOGIN -->
-
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-<!--   <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-    <li data-target="#myCarousel" data-slide-to="3"></li>
-  </ol> -->
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
@@ -64,33 +30,26 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <!-- <a class="brand" href="index.html"><img src="logo.png" alt="Typica - Bootstrap Awesome Template!"></a> -->
         </div>
-      <!-- </div> -->
-      </div>
-
-  
-    <div style="opacity: 0.8" class="container">
-        <div id="login-wraper">
-            <form class="form login-form animated tada">
-                <legend> <span class="blue">The MEAN Stack Blog!</span></legend>
-            
-                <div class="row">
-            <div class="col-sm-6 text-right"><strong>Email:</strong></div>
-            <div class="col-sm-6 text-left"><input type="text" ng-model="email" /></div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6 text-right"><strong>Password:</strong></div>
-            <div class="col-sm-6 text-left"><input type="password" ng-model="password" /></div>
-        </div>
-        <div class="row text-center">
-        <br>
-            <button class="btn btn-primary btn-xs" ng-click="clickToLogin(email, password)"> <i class="fa fa-user"></i>  Login </button>
-       
-            
-            </form>
-        </div>
+<div style="opacity: 0.8" class="container">
+    <div id="login-wraper">
+        <form class="form login-form animated bounceIn">
+            <legend> <span class="blue">The MEAN Stack Blog!</span></legend>
+        
+            <div class="row">
+                <div class="col-sm-6 text-right"><strong>Email:</strong></div>
+                <div class="col-sm-6 text-left"><input type="text" ng-model="email" /></div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 text-right"><strong>Password:</strong></div>
+                <div class="col-sm-6 text-left"><input type="password" ng-model="password" /></div>
+            </div>
+            <div class="row text-center">
+            <br>
+                <button class="btn btn-primary btn-xs" ng-click="clickToLogin(email, password)"> <i class="fa fa-user"></i>  Login </button>
+        </form>
     </div>
+</div>
 
     <footer style="color: black; opacity: 0.8" class="white navbar-fixed-bottom" >
       Don't have an account? <a href="#/register"> Register Here </a>
